@@ -2,9 +2,12 @@
 
 * New Features
 
-  * Node#at_xpath returns the first element of the NodeSet matching the XPath expression.
-  * Node#at_css returns the first element of the NodeSet matching the CSS selector.
+  * Node#at_xpath returns the first element of the NodeSet matching the XPath
+    expression.
+  * Node#at_css returns the first element of the NodeSet matching the CSS
+    selector.
   * NodeSet#| for unions GH #119 (Thanks Serabe!)
+  * NodeSet#inspect makes prettier output
 
 * Bugfixes
 
@@ -14,6 +17,7 @@
   * NodeSet#xpath handles custom xpath functions
   * Fixing a SEGV when XML::Reader gets attributes for current node
   * Node#inner_html takes the same arguments as Node#to_html GH #117
+  * DocumentFragment#css delegates to it's child nodes GH #123
 
 === 1.3.3 / 2009/07/26
 
